Bug 506991 - plasmashell crashes with QT_QUICK_BACKEND=software
Summary: plasmashell crashes with QT_QUICK_BACKEND=software
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.4.80
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 506942 506999 507025 507539 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-07-13 13:40 UTC by Nicolas Fella
Modified: 2025-07-27 17:05 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.17
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/215918/events/55b5b810f7534744a26be27fcce02dcd/


Attachments
New crash information added by DrKonqi (77.69 KB, text/plain)
2025-07-13 13:40 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-07-13 13:40:20 UTC
Application: plasmashell (6.4.80)
 (Compiled from sources)
ApplicationNotResponding [ANR]: false
Qt Version: 6.10.0
Frameworks Version: 6.17.0
Operating System: Linux 6.15.5-200.fc42.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 42 (KDE Plasma Desktop Edition)"
DrKonqi: 6.4.80 [CoredumpBackend]

-- Information about the crash:


The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  0x00007f80ab525198 in QQmlPrivate::AOTCompiledContext::setInstructionPointer (this=this@entry=0x1179d7d0, offset=offset@entry=4) at /home/nico/workspace/qt6/qtdeclarative/src/qml/qml/qqml.cpp:1182
#6  0x00007f8058cc5cb7 in QmlCacheGeneratedCode::_qt_qml_org_kde_kirigami_primitives_Separator_qml::aotBuiltFunctions::{lambda(QQmlPrivate::AOTCompiledContext const*, void**)#3}::operator()(QQmlPrivate::AOTCompiledContext const*, void**) const (__closure=<optimized out>, aotContext=0x1179d7d0, argv=0x11ec5890) at /home/nico/kde/build/kirigami/src/primitives/.rcc/qmlcache/KirigamiPrimitives_Separator_qml.cpp:675
#7  0x00007f80abf0a9a2 in QSGSoftwareRenderableNode::update (this=0x11ec5990) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/adaptations/software/qsgsoftwarerenderablenode.cpp:151
#8  0x00007f80abefa8e5 in QSGAbstractSoftwareRenderer::nodeChanged (this=0xf6e7350, node=0x11ec5890, state=...) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/adaptations/software/qsgabstractsoftwarerenderer.cpp:66
#9  0x00007f80abf47378 in QSGRootNode::notifyNodeChange (this=this@entry=0x1050c3c0, node=node@entry=0x11ec5890, state=..., state@entry=...) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/coreapi/qsgnode.cpp:1242
#10 0x00007f80abf47400 in QSGNode::markDirty (this=0x11ec5890, bits=...) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/coreapi/qsgnode.cpp:636
#11 0x00007f8058cc012e in SoftwareRectangleNode::preprocess (this=0x1179d5f0) at /home/nico/kde/src/kirigami/src/primitives/scenegraph/softwarerectanglenode.cpp:134
#12 0x00007f80abf4b213 in QSGRenderer::preprocess (this=0xf6e7350) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:239
#13 0x00007f80abf4b7ec in QSGRenderer::renderScene (this=0xf6e7350) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:142
#14 QSGRenderer::renderScene (this=0xf6e7350) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:120
#15 0x00007f80abee3bb7 in QQuickWindowPrivate::renderSceneGraph (this=this@entry=0xcec0710) at /home/nico/workspace/qt6/qtdeclarative/src/quick/items/qquickwindow.cpp:690
#16 0x00007f80abf1292d in QSGSoftwareRenderLoop::renderWindow (this=0xb2afac0, window=<optimized out>, isNewExpose=false) at /home/nico/workspace/qt6/qtdeclarative/src/quick/scenegraph/adaptations/software/qsgsoftwarerenderloop.cpp:145
#17 0x00007f80abee8278 in QQuickWindow::event (this=this@entry=0xbdf6ed0, event=event@entry=0x7ffc947c2fc0) at /home/nico/workspace/qt6/qtdeclarative/src/quick/items/qquickwindow.cpp:1595
#18 0x0000000000444c8b in PanelView::event (this=0xbdf6ed0, e=0x7ffc947c2fc0) at /home/nico/kde/src/plasma-workspace/shell/panelview.cpp:1358
#19 0x00007f80ac996a18 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xbdf6ed0, e=0x7ffc947c2fc0) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qapplication.cpp:3310
#20 0x00007f80a9ba24e8 in QCoreApplication::notifyInternal2 (receiver=0xbdf6ed0, event=0x7ffc947c2fc0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109


Reported using DrKonqi
Comment 1 Nicolas Fella 2025-07-13 13:40:21 UTC
Created attachment 183201 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 3 Bug Janitor Service 2025-07-14 07:00:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1883
Comment 4 Vadym Krevs 2025-07-14 07:52:51 UTC
So is https://bugs.kde.org/show_bug.cgi?id=506942 then a duplicate of this issue (or vice versa)?
Comment 5 Antonio Rojas 2025-07-14 08:03:24 UTC
*** Bug 506999 has been marked as a duplicate of this bug. ***
Comment 6 Antonio Rojas 2025-07-14 08:04:22 UTC
*** Bug 506942 has been marked as a duplicate of this bug. ***
Comment 7 Antonio Rojas 2025-07-14 14:09:24 UTC
*** Bug 507025 has been marked as a duplicate of this bug. ***
Comment 8 Vlad Zahorodnii 2025-07-14 15:15:39 UTC
Git commit 140067bb3ab57cfcdc0daf0f3964e217cd32d3cd by Vlad Zahorodnii.
Committed on 14/07/2025 at 12:53.
Pushed by vladz into branch 'master'.

Fix SoftwareRectangleNode creating QSGImageNode's without texture

If the texture provider has no texture, the QSGImageNode should be
removed from the scene graph, otherwise the renderer will crash.

M  +36   -25   src/primitives/scenegraph/softwarerectanglenode.cpp
M  +2    -0    src/primitives/scenegraph/softwarerectanglenode.h

https://invent.kde.org/frameworks/kirigami/-/commit/140067bb3ab57cfcdc0daf0f3964e217cd32d3cd
Comment 9 Vadym Krevs 2025-07-14 16:25:35 UTC
Just tested the latest OBS updates which include the https://bugs.kde.org/show_bug.cgi?id=506991#c8 fix and the issue reported in https://bugs.kde.org/show_bug.cgi?id=506942 no longer happens. Thank you for a quick fix!
Comment 10 Antonio Rojas 2025-07-27 17:05:25 UTC
*** Bug 507539 has been marked as a duplicate of this bug. ***