Fix another ShadowedTexture crash with software rendering

It looks like when the filtering property of the QSGImageNode changes,
QtQuick will unconditionally access the corresponding texture object. It
performs no null checks.

Since the texture is set later, texture() is null so accessing any of
its properties will crash the whole process.

BUG: 506991